PrincipalScreen base design

--- a/weighting_soft.csproj
+++ b/weighting_soft.csproj
@@ -105,6 +105,12 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <EmbeddedResource Include="Screens\InitialConfigurationScreen.resx">
+      <DependentUpon>InitialConfigurationScreen.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Screens\PrincipalScreen.resx">
+      <DependentUpon>PrincipalScreen.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Screens\SplashScreen.resx">
       <DependentUpon>SplashScreen.cs</DependentUpon>
     </EmbeddedResource>
